--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,15 @@
                 <option value="Whitefield">Whitefield</option>
                 <option value="HSR Layout">HSR Layout</option>
                 <option value="Indira Nagar">Indira Nagar</option>
+                <option value="Chikka Tirupathi">Chikka Tirupathi</option>
+                <option value="Whitefield">Whitefield</option>
+                <option value="Rajaji Nagar">Rajaji Nagar</option>
+                <option value="Old Airport Road">Old Airport Road</option>
+                <option value="Kothanur">Kothanur</option>
+                <option value="Lingadheeranahalli">Lingadheeranahalli</option>
+                <option value="Marathahalli">Marathahalli</option>
+                <option value="Sarjapur">Sarjapur</option>
+                
             </select>
 
             <label for="area_type">Area Type</label>
